@@ -25,3 +25,6 @@ Authors
   1348 Ottignies-Louvain-la-Neuve
   Belgium
   https://uclouvain.be/icteam
+
+* James Manners
+  Australia
