@@ -98,6 +98,16 @@ namespace OrthancPlugins
                   unsigned int timeout);
 
   bool DoPostPeer(Json::Value& answer,
+                  std::map<std::string, std::string>& answerHeaders,
+                  const OrthancPeers& peers,
+                  size_t peerIndex,
+                  const std::string& uri,
+                  const std::string& body,
+                  unsigned int maxRetries,
+                  const std::map<std::string, std::string>& headers,
+                  unsigned int timeout);
+
+  bool DoPostPeer(Json::Value& answer,
                   const OrthancPeers& peers,
                   const std::string& peerName,
                   const std::string& uri,
