@@ -4,6 +4,12 @@ Pending changes in the mainline
 Minimum plugin SDK (for build): 1.12.1
 Minimum Orthanc runtime: 1.12.1
 
+* For "Push" jobs, if the initial response from the remote peer contains a cookie, this
+  cookie is copied in all subsequent requests to the same peer for this push job: 
+    Some load balancers such as AWS Application Load Balancer use Sticky
+    Session Cookies, which are set by the load balancer on a request. If
+    subsequent requests include these cookies, then the load balancer will
+    route the request to the same backend server.
 * now setting "Content-Type" HTTP headers in outgoing POST requests.
   (https://discourse.orthanc-server.org/t/transfer-accelerator-plugin-http-header-compatibility/5725)
 * new "PeerCommitTimeout" configuration to configure the HTTP Timeout when committing
